--- a/Farmgame/index.html
+++ b/Farmgame/index.html
@@ -26,37 +26,47 @@
     <sectoin class="onebody" id="onebody">
         <div class="container">
             <h2>What`s inside the game</h2>
-            <div class="first">
-                <img src="img/image3.jpg" alt="image3" class="first-image">
-                <div class="first-wrap"> 
-                    <h3 class="first-title">Run as fast as you can</h3>
-                <p class="first-text">You have to be very fast to not be caught by the Farmer</p>
+            <div class="first-cont">
+                <div class="first">
+                    <img src="img/image3.jpg" alt="image3" class="first-image">
+                     <div class="first-wrap"> 
+                      <h3 class="first-title">Run as fast as you can</h3>
+                    <p class="first-text">You have to be very fast to not be caught by the Farmer</p>
+                    </div>
                 </div>
-            </div>
-                 <div class="first">
-                <img src="img/image 31.jpg" alt="image31" class="first-image">
-                <div class="first-wrap"> 
-                    <h3 class="first-title">Protect your animal friends</h3>
-                <p class="first-text">You have so many friends – protect them all!</p>
+                     <div class="first">
+                        <img src="img/image 31.jpg" alt="image31" class="first-image">
+                        <div class="first-wrap"> 
+                         <h3 class="first-title">Protect your animal friends</h3>
+                    <p class="first-text">You have so many friends – protect them all!</p>
+                    </div>
                 </div>
-            </div>
                         <div class="first">
-                <img src="img/image32.jpg" alt="image32" class="first-image">
-                <div class="first-wrap"> 
-                    <h3 class="first-title">Score as much points as you can</h3>
-                <p class="first-text">In the end this is all about points. Show your strength!</p>
+                          <img src="img/image32.jpg" alt="image32" class="first-image">
+                       <div class="first-wrap"> 
+                        <h3 class="first-title">Score as much points as you can</h3>
+                    <p class="first-text">In the end this is all about points. Show your strength!</p>
+                    </div>
                 </div>
             </div>
-        </div>
+         </div>
+           
     </sectoin>
     <sectoin class="twobody" id="twobody">
         <div class="container">
-
+            <div class="two-wrap"> 
+                 <div class="two">
+                    <h2 class="twoonetitle">More animals you save, closer your victory!</h2>
+                    <h3 class="two-title">Don`t miss the chance to make the Farmer cry again. Animals, be strong!</h3>
+                    <a href="#" class="button">Play now</a> 
+                </div>
+                <img src="img/image4.png" alt="icow">
+            </div>
         </div>
     </sectoin>
     <footer class="footer" id="footer">
         <div class="container">
-
+            <p class="footer-text">2030 Ⓒ All rights reserved</p>
         </div>
     </footer>
     
